# python-project-50

./: .codeclimate.yml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
gendiff/scripts/: gendiff.py
tests/: test_json_comparison.py
